# MPS

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  ps-eval.cpp
include/pokerstove/peval/: BadugiHandEvaluator.h  Card.h  CardSet.h  CardSetGenerators.h  DeuceToSevenHandEvaluator.h  DrawHighHandEvaluator.h  Holdem.h  HoldemHandEvaluator.h  OmahaEightHandEvaluator.h  OmahaHighHandEvaluator.h  PokerEvaluation.h  PokerHand.h  PokerHandEvaluation.h  PokerHandEvaluator.h  Rank.h  RazzHandEvaluator.h  StudEightHandEvaluator.h  StudHandEvaluator.h  Suit.h  UniversalHandEvaluator.h
src/peval/: Card.cpp  CardSet.cpp  CardSetGenerators.cpp  PokerEvaluation.cpp  PokerHand.cpp  PokerHandEvaluator.cpp  PokerHandEvaluator_Alloc.cpp  Rank.cpp  Suit.cpp
test/: CMakeLists.txt  CardSet.test.cpp  Rank.test.cpp  Suit.test.cpp
