##########################################
## tests ##
##########################################

# /W3 warning in msvc fixed with 3.15, also supports FetchContent
cmake_minimum_required(VERSION 3.15 FATAL_ERROR)

# ps-eval
#add_executable(ps_eval ps-eval.cpp)
#target_link_libraries(ps_equity PRIVATE ${PROJECT_NAME}::penum fmt::fmt)
